--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,8 +3,8 @@
     "short_name": "Cat Chat",
     "start_url": "/",
     "display": "standalone",
-    "background_color": "#ffffff",
-    "theme_color": "#000000",
+    "background_color": "#4a1ff6",
+    "theme_color": "#ffffff",
     "icons": [
       {
         "src": "/icons/icon-192x192.png",
